--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,12 +3,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tech Blog</title>
+    <title>FutureTech</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
   </head>
   <body>
     <nav>
-      <h1><a href="/">Tech Blog</a></h1>
+      <h1><a href="/">FutureTech</a></h1>
       <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/dashboard">Dashboard</a></li>
